--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link rel="stylesheet" href="/stylesheets/index.css">
     
     
 </head>
