--- a/views/home.html
+++ b/views/home.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width">
+    <title>Mercado Liebre</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/styles.css">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
@@ -15,33 +14,6 @@
     
 </head>
 <body>
-    <h4>Soy un h4</h4>
-
-    <h1>El título de nuestro documentos</h1>
-
-    <h2>Un subtítulo cualquiera</h2>
-    <img src="/images/paisaje1.jpg" alt="Mi primer Paisaje">
-
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptate eum laboriosam nihil impedit accusantium
-    perferendis nostrum quas maxime, magnam tempore saepe, doloribus assumenda architecto repudiandae inventore facere
-    perspiciatis adipisci.</p>
-    
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptate eum laboriosam nihil impedit accusantium
-    perferendis nostrum quas maxime, magnam tempore saepe, doloribus assumenda architecto repudiandae inventore facere
-    perspiciatis adipisci.</p>
-    
-    <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ol>
-
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
-
-    <a href="https://www.google.com.ar">Ir a Google</a>
+ 
 </body>
 </html>
