--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,31 +6,112 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-h1 {
-    font-size: 35px;
+.main-header{
+    background-color: #eac926;
+    padding: 20px;
 }
 
-h2{
-    font-size: 20px;
+.logo{
+    width: 200px;
 }
 
-p{
+.copy-header{
+    font-weight: 400px;
+    text-align: center;
+}
+
+.hamburguer-button{
+    background-color: #03264c;
+    color: #ffffff;
+    display: block;
+    max-width: 50px;
+    padding: 15px 0;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
+}
+
+.main-navbar{
+    display: none;
+}
+
+.main-navbar ul{
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.main-navbar a {
+    text-decoration:none; 
+    color: #222222;
+    display: inline-block;
+    padding: 5px 0;
     font-size: 17px;
-    line-height: 24px;
 }
 
-.contenedor01{
-    width: 90%;
-    padding: 20px;
-    border: dashed 5px white;
-    background-color: chartreuse; 
-    margin: 0 auto;
+@media (min-width: 768px){
+    .main-header-top-bar{
+
+        display:flex;
+        justify-content: space-between;
+    }
+
+    .copy-header{
+        max-width: 350px;
+        text-align: right;
+    }
+
+    .hamburguer-button{
+        display: none;
+    }
+
+    .main-navbar{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .main-navbar ul{
+        display: flex;
+    }
+    
+    .main-navbar li{
+        margin: 0 5px;
+    }
+    
 }
 
-.contenedor02{
-    width: 90vw;
-    background-color: darkred;
-    padding: 20px;
-    border: dashed 5px coral;
-    margin: 0 auto;
+
+@media (min-width: 1200px){
+
+    .logo{
+        width: 250px;
+    }
+
+    .main-header-top-bar, .main-navbar{
+        max-width: 1200px;
+        margin: auto;
+    }
+    .main-header-top-bar{
+        align-items: center;   
+    }
+
+    .main-navbar{
+        margin-top: 40px;
+    }
+
+    .main-navbar li{
+        margin: 0 10px;
+    }
+
+    .main-navbar a{
+        font-size: 19px;
+    }
+
+    .copy-header{
+        margin: 0;
+        max-width: none;
+        font-size: 18px;
+        font-weight: 400px;
+    }
 }
