--- a/views/home.html
+++ b/views/home.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="https://kit.fontawesome.com/acb4f04276.js" crossorigin="anonymous"></script>
-    
-    
-    
 </head>
+
+<!--  ----------ARRANCA EL BODY----------  -->
+
 <body>
     <header class="main-header">
         <div class="main-header-top-bar">
@@ -22,18 +22,19 @@
                     Comprá en cuotas y sin tarjeta de crédito
                 </h2>
         </div>
-        <nav class="main-header-bottom-bar">
-            <ul>
+        <a href="#" class="hamburguer-button"><i class="fas fa-bars"></i></a>
+        <nav class="main-navbar">
+            <ul class="left-navbar">
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
                 <li><a href="#">Vender</a></li>
                 <li><a href="#">Ayuda</a></li>
             </ul>
 
-            <ul>
-                <li><a href="#">Creá tu cuenta</a></li>
-                <li><a href="#">Ingresá</a></li>
-                <li><a href="#">Mis compras</a></li>
+            <ul class="right-navbar">
+                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
             </ul>
 
         </nav>        
