--- a/views/home.html
+++ b/views/home.html
@@ -39,19 +39,48 @@
 
         </nav>        
     </header>
-    <form action="" method="POST">
-        <div>
+    <form action="/crear-producto" method="POST" class="create-form">
+        <div class="control-formulario">
             <label>Nomnbre del Producto: </label>
-            <input type="text" name="nombre">
+            <input type="text" name="nombre" class="control">
         </div>
-        <div>
+        <div class="control-formulario">
             <label>Precio: </label>
-            <input type="text" name="precio">
+            <input type="text" name="precio" placeholder="123.56" class="control">
         </div>
-        <div>
+        <div class="control-formulario">
+            <label>Categoría:</label>
+            <select name="Categoria"  class="control">
+                <option value="hogar">Hogar</option>
+                <option value="electro">Electro</option>
+                <option value="indumentaria">Indumentaria</option>
+            </select>
+        </div>
+        <div class="control-formulario">
+            <label>Ciudad:</label>
+            <select name="ciudad"  class="control">
+                <option value="baires">Buenos Aires</option>
+                <option value="ros">Rosario</option>
+                <option value="mdz">Mendoza</option>
+            </select>
+        </div>
+        <div class="control-formulario">
+            <label>Descripción: </label>
+            <textarea name="descripcion"  class="control"></textarea>
+        </div>
+        <div class="control-formulario">
             <label>Está en oferta: </label>
-            <input type="radio" name="enOferta">
+            <input type="radio" name="enOferta"  class="control">
         </div>
+        <button type="reset" class="boton-formulario">Borrar</button>
+        <button type="submit" class="boton-formulario">Guardar</button>
     </form>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat asperiores repudiandae quod perspiciatis, at est maiores animi accusantium corrupti praesentium laudantium optio autem illum alias incidunt natus distinctio! Qui, quam.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sed deserunt nam error quibusdam dolores, praesentium, amet porro quo sapiente voluptates placeat nemo, atque recusandae non totam sunt magni provident?</p>
 </body>
 </html>
